--- a/templates/districts/district_report.html
+++ b/templates/districts/district_report.html
@@ -613,7 +613,7 @@
             <tr>
               <td>7</td>
               <td style="text-align: left; padding-left: 1rem;">Fungu la Kumi la Dist. Supt</td>
-              <td>{{ district_supt_tithe }}</td>
+              <td>{{ total_dsp_tithe }}</td>
             </tr>
           </tbody>
           <tfoot>
