--- a/templates/districts/section_reports/monthly_report_details.html
+++ b/templates/districts/section_reports/monthly_report_details.html
@@ -10,7 +10,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div>
                             <h6 class="text-church-primary">SECTION NAME</h6>
-                            <h3 class="text-church-secondary">{{section_report.section.name}}, {{section_report.year}}</h3>
+                            <h3 class="text-church-secondary">{{month_report.section_report.section.name}}, {{month_report.month}}({{month_report.section_report.year}})</h3>
                         </div>
                     </div>
                 </div>
@@ -30,37 +30,7 @@
             </div>
         </div>
     </div>
-<!--
-    <div class="row g-4 mb-4">
-        <div class="col-xl-6 col-md-6">
-            <div class="card card-stat h-80">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div>
-                            <h6 class="text-church-primary">BEST PERFORMER</h6>
-                            <h3 class="text-church-secondary">{{best_performer}}</h3>
-                        </div>
-                        <i class="fas fa-hand-holding-heart stats-icon text-church-gold"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="col-xl-6 col-md-6">
-            <div class="card card-stat h-80">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div>
-                            <h6 class="text-church-primary">LOWEST PERFORMER</h6>
-                            <h3 class="text-church-secondary">{{lowest_performer}}</h3>
-                        </div>
-                        <i class="fas fa-church stats-icon text-church-gold"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
--->
 <div class="table-card">
     <div class="row py-3 px-2">
         <div class="col">
@@ -68,45 +38,72 @@
         </div>
         <div class="col">
             <select class="form-control" id="searchSelect">
-                <option value="">-- Select a month --</option>
-                {% for month in months %}
-                    <option value="{{ month }}" {% if search_query == month %}selected{% endif %}>
-                        {{ month }}
+                <option value="">-- Select a church --</option>
+                {% for church in churches %}
+                    <option value="{{ church.id }}" {% if search_query == church.id %}selected{% endif %}>
+                        {{ church.name }}
                     </option>
                 {% endfor %}
             </select>
         </div>
+        <div class="col">
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#captureChurchDataModal{{month_report.id}}">Record Church Data</button>
+          </div>
     </div>
-
+ {% include "districts/capture_church_data.html" %}
     <div class="loader" id="loader"></div>
     <div class="table-container px-2">
         <table class="table data-table table-sm table-borders-all">
             <thead>
                 <tr class="table-headers-borders">
                     <th></th>
-                    <th>Section</th>
-                    <th>Month</th>
-                    <th>Year</th>
-                    <th>Created On</th>
+                    <th>Church</th>
+                    <th>Pastor</th>
+                    <th>General Fund</th>
+                    <th>Sunday School</th>
+                    <th>Pastors Fund</th>
+                    <th>Presbyter Tithe</th>
+                    <th>Pastor's Tithe</th>
+                    <th>Easter Building</th>
+                    <th>Kenya Kids</th>
+                    <th>Special Offering</th>
+                    <th>Dst. Missions</th>
+                    <th>Adult Att.</th>
+                    <th>Children Att.</th>
+                    <th>Total</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody id="tableBody">
-                {% for month_report in monthly_reports %}
+                {% for church_report in church_reports %}
                 <tr>
                     <td>{{ forloop.counter }}</td>
-                    <td>{{ month_report.section_report.section.name }}</td>
-                    <td>{{ month_report.month }}</td>
-                    <td>{{ month_report.year }}</td>
-                    <td>{{  month_report.created_at}}</td>
+                    <td>{{ church_report.church}}</td>
+                    <td>{{ church_report.pastor}}</td>
+                    <td>{{ church_report.general_fund }}</td>
+                    <td>{{ church_report.sunday_school }}</td>
+                    <td>{{ church_report.pastors_fund }}</td>
+                    <td>{{ church_report.presbyter_tithe }}</td>
+                    <td>{{ church_report.pastors_tithe }}</td>
+                    <td>{{ church_report.easter }}</td>
+                    <td>{{ church_report.kenya_kids }}</td>
+                    <td>{{ church_report.special_offering}}</td>
+                    <td>{{ church_report.district_missions}}</td>
+                    <td>{{ church_report.adult }}</td>
+                    <td>{{ church_report.children }}</td>
+                    <td>{{ church_report.total_collected}}</td>
                     <td>
-                        <a href="{% url 'monthly-report-detail' month_report.id %}" class="btn btn-primary btn-sm"><i class="fas fa-eye"></i></a>
+                        <a class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editChurchDataModal{{church_report.id}}"><i class="fas fa-edit"></i></a>
+                        <a class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteDistrictBranchModal{{church_report.id}}"><i class="fas fa-trash"></i></a>
                     </td>
                     
+                    {% include "districts/edit_church_data.html" %}
+                    {% include "districts/section_reports/delete_report.html" %}
+                   
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="15" class="text-center py-4">
+                    <td colspan="16" class="text-center py-4">
                         No reports found
                     </td>
                 </tr>
