--- a/templates/offerings/offerings.html
+++ b/templates/offerings/offerings.html
@@ -6,7 +6,7 @@
 <div class="table-card">
     <div class="row py-3 px-2">
         <div class="col">
-            <h3>Church Offerings</h3>
+            <h3 class="fw-bold">Church Offerings</h3>
         </div>
         <div class="col">
             <input type="text" class="form-control" placeholder="Search..." 
@@ -27,6 +27,8 @@
                     <th></th>
                     <th>Branch</th>
                     <th>Service</th>
+                    <th>Channel</th>
+                    <th>Type</th>
                     <th>Amount</th>
                     <th>Date</th>
                     <th></th>
@@ -38,6 +40,8 @@
                     <td>{{ forloop.counter }}</td>
                     <td>{{ offering.branch }}</td>
                     <td>{{ offering.service }}</td>
+                    <td>{{  offering.offering_channel}}</td>
+                    <td>{{  offering.offering_type}}</td>
                     <td>{{  offering.amount}}</td>
                     <td>{{  offering.offering_date}}</td>
                     
