--- a/templates/projects/project_details.html
+++ b/templates/projects/project_details.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 <!-- Stats Row -->
+ <div class="row g-4">
+<nav aria-label="breadcrumb" class="mb-0">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="{% url 'home' %}">Dashboard</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'projects' %}">Church Projects</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{{ project.name }}</li>
+  </ol>
+</nav>
 <div class="dashboard">
     <div class="row g-4 mb-4">
        <div class="col-xl-6 col-md-6">
